# hockey

./: .gitignore  .gitleaks.toml  0  AGENTS.md  CHANGELOG_TIMESLOTS.md  CLAUDE.md  CODEX.md  DEBUG_CALENDAR.md  Makefile  OPENCODE.md  README.md  available_tournament_dates_2026.txt  ballhall_calendar.html  corrected_dates.txt  debug-calendar.sh  debug_calendar.py  debug_excel_teams.py  example_tournaments.xlsx  input.json  input.xlsx  outlook_ballhall.html  pyproject.toml  pytest.ini  requirements.txt  tournament-scheduler.sh  tournament_scheduler.py  tournament_scheduler_interactive.py  tournament_scheduler_interactive_old.py
.claude/: settings.local.json
.notes/: improvements.md
.pipeline/: stage1_config.json  stage2_scraping.json  stage3_planning.json  stage4_export.json
.ps-next/: BACKLOG.md  HISTORY.md  PLAN-124.md  PLAN-125.md  PLAN-126.md  PLAN-127.md  PLAN-128.md  PLAN-129.md  PLAN-130.md  PLAN-131.md  PLAN-132.md  PLAN-133.md  PLAN-134.md  PLAN-135.md  PLAN-136.md  PLAN-137.md  PLAN-138.md  PLAN-139.md  PLAN-140.md  PLAN-141.md  PLAN-142.md  PLAN-143.md  PLAN-144.md  PLAN-145.md  PLAN-146.md  PLAN-147.md  PLAN-150.md  PLAN-151.md  PLAN-152.md  PLAN-153.md  PLAN-154.md  PLAN-155.md  PLAN-156.md  PLAN-157.md  PLAN-158.md  PLAN-159.md  PLAN-160.md  PLAN-161.md  PLAN-162.md  PLAN-163.md  (+28 more)
docs/: desktop-app.md  rvv-miniputt-deployment-architecture.md  rvv-miniputt-input-formats.md  rvv-miniputt-pipeline.md  rvv-miniputt-rules-report.md
documentation/: input.json
existing_schedule/: U10_ETTER_JUL_Klar_-_Kongsberg_Sandefjord.xlsx
export/: season_plan.csv  (+5 more)
(+595 files in other folders)
